k8s-deployment-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
  namespace: microservices
  labels:
    app: admin-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin-service
  template:
    metadata:
      labels:
        app: admin-service
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: admin-service
          image: harshareddy2024/admin-service:latest
          ports:
            - containerPort: 4001
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: config-volume
          configMap:
            name: admin-service-config
