k8s-service-admin-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service-nodeport
  namespace: microservices
  labels:
    app: admin-service
spec:
  selector:
    app: admin-service
  ports:
    - port: 4001
      targetPort: 4001
      nodePort: 30001
      protocol: TCP
  type: NodePort
