k8s-service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: microservices
  labels:
    app: admin-service
spec:
  selector:
    app: admin-service
  ports:
    - port: 4001
      targetPort: 4001
      protocol: TCP
  type: ClusterIP
