k8s-service-faculty-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: faculty-service-nodeport
  namespace: microservices
  labels:
    app: faculty-service
spec:
  selector:
    app: faculty-service
  ports:
    - port: 4002
      targetPort: 4002
      nodePort: 30002
      protocol: TCP
  type: NodePort
