k8s-service-faculty.yaml
apiVersion: v1
kind: Service
metadata:
  name: faculty-service
  namespace: microservices
  labels:
    app: faculty-service
spec:
  selector:
    app: faculty-service
  ports:
    - port: 4002
      targetPort: 4002
      protocol: TCP
  type: ClusterIP
