k8s-service-gateway-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-nodeport
  namespace: microservices
  labels:
    app: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30000
      protocol: TCP
  type: NodePort
