k8s-service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: microservices
  labels:
    app: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
  type: ClusterIP
