k8s-service-student-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-service-nodeport
  namespace: microservices
  labels:
    app: student-service
spec:
  selector:
    app: student-service
  ports:
    - port: 4003
      targetPort: 4003
      nodePort: 30003
      protocol: TCP
  type: NodePort
