k8s-service-student.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-service
  namespace: microservices
  labels:
    app: student-service
spec:
  selector:
    app: student-service
  ports:
    - port: 4003
      targetPort: 4003
      protocol: TCP
  type: ClusterIP
